@@ -7,6 +7,7 @@ use Error::Pure qw(err);
 use List::Util 1.33 qw(none);
 use Mo qw(build is);
 use Mo::utils qw(check_array);
+use Mo::utils::CSS qw(check_css_class);
 use Readonly;
 
 Readonly::Array our @DATA_TYPES => qw(plain tags);
@@ -32,6 +33,9 @@ has url => (
 
 sub BUILD {
 	my $self = shift;
+
+	# Check CSS class.
+	check_css_class($self, 'css_class');
 
 	# Check data type.
 	if (! defined $self->{'data_type'}) {
@@ -246,6 +250,7 @@ L<Error::Pure>,
 L<List::Util>,
 L<Mo>,
 L<Mo::utils>,
+L<Mo::utils::CSS>,
 L<Readonly>.
 
 =head1 REPOSITORY
