@@ -29,6 +29,7 @@ requires:
   List::Util: 1.33
   Mo: 0
   Mo::utils: 0.14
+  Mo::utils::CSS: 0
   Readonly: 0
   perl: 5.8.0
 resources:
