@@ -22,6 +22,7 @@ requires 'Error::Pure' => 0;
 requires 'List::Util' => 1.33;
 requires 'Mo' => 0;
 requires 'Mo::utils' => 0.14;
+requires 'Mo::utils::CSS' => 0;
 requires 'Readonly' => 0;
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/Data-HTML-Element/issues';
 resources 'homepage' => 'https://github.com/michal-josef-spacek/Data-HTML-Element';
