@@ -1,4 +1,5 @@
 0.09
+ - Add check for CSS class.
  - Update to bigger version because issues in $VERSION.
 
 0.01 2024-01-06T18:02:59+01:00
